src/objects/Glxy_LeaseCoContact__c.object
<CustomObject>
    <description>This table contains the Lease CO and TCO Contact information. This information is needed during the Lease Digest approval process. BA53 users will use this information as pick list for changing the value of CO user assigned to the lease.</description>
    <fields>
        <fullName>OID_RegionCd_RoleCd__c</fullName>
        <externalId>true</externalId>
        <label>OID RegionCode RoleCode</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OID_USER_NAME__c</fullName>
        <label>OID User Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_CD__c</fullName>
        <label>Role Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>TCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionCD__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lease CO Contact</label>
    <nameField>
        <displayFormat>LCN-{00000000}</displayFormat>
        <label>Lease Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease CO Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>